--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -43,6 +43,9 @@
                                 </div>
                             </div>
                             <p class="dev__info">{{profile.bio|slice:"150"}}</p>
+                            <p class="dream_university">Dream School: {{ profile.dream_school }}</p>
+                            <p class="intended_major">Dream Major: {{profile.major }}</p>
+
                             <div class="dev__skills">
 
                                 {% for skill in profile.skill_set.all|slice:"5" %}
