--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -37,7 +37,7 @@
 
                 <div class="form__field">
                     <label for="formInput#text">Tags</label>
-                    <textarea class="input" name="newtags" placeholder="Add tags here..."></textarea>
+                    <textarea class="input" name="newtags" placeholder="Add crop name"></textarea>
                 </div>
                 <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
             </form>
