--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
     <!-- Dev Search UI -->
     <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
 
-    <title>PeerReview - Connect with fellow applicants!</title>
+    <title>Bloom</title>
 
 </head>
 
