--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -7,15 +7,15 @@
     <section class="hero-section text-center">
         <div class="container container--narrow">
             <div class="hero-section__box">
-                <h2>Search for <span>Posts</span></h2>
+                <h2>Your Data<span></span></h2>
             </div>
 
             <div class="hero-section__search">
                 <form id='searchForm' class="form" action="{% url 'projects' %}" method="get">
                     <div class="form__field">
-                        <label for="formInput#search">Search By Posts </label>
+                        <label for="formInput#search">Your Data </label>
                         <input class="input input--text" id="formInput#search" type="text" name="search_query"
-                            placeholder="Search by Post Title" value="{{search_query}}" />
+                            placeholder="Search by Title" value="{{search_query}}" />
                     </div>
 
                     <input class="btn btn--sub btn--lg" type="submit" value="Search" />
