--- a/static/uikit/styles/modules/_variables.css
+++ b/static/uikit/styles/modules/_variables.css
@@ -15,7 +15,7 @@
   --color-success-bg: #def8e8;
   --color-error: #fc4b0b;
   --color-error-bg: #fff2ee;
-  --font-family: arial;
+  --font-family: Fira Code;
   --font-regular: 300;
   --font-medium: 500;
   --font-bold: 700;
