--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
 <header class="header">
     <div class="container container--narrow">
         <a href="{% url 'profiles' %}" class="header__logo">
-           <img src="{% static 'images/peer-review.png' %}" alt="Peer-Review Logo" />
+           <img src="{% static 'images/REAL_HOME.png' %}" alt="Peer-Review Logo" />
         </a>
 
         <nav class="header__nav">
@@ -14,8 +14,8 @@
                 <div class="toggle-menu__lines"></div>
             </label>
             <ul class="header__menu">
-                <li class="header__menuItem"><a href="{% url 'profiles' %}">Students</a></li>
-                <li class="header__menuItem"><a href="{% url 'projects' %}">Posts</a></li>
+                <li class="header__menuItem"><a href="{% url 'profiles' %}">Profiles</a></li>
+                <li class="header__menuItem"><a href="{% url 'projects' %}">Data</a></li>
 
 
 
