--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -7,9 +7,9 @@
     <section class="hero-section text-center">
         <div class="container container--narrow">
             <div class="hero-section__box">
-                <h2>FIND <span>STUDENTS</span></h2>
-                <h2>FROM AROUND THE WORLD</h2>
+                <img src="images/bloom-logo-nobg.png" alt="Bloom Logo" style="max-width: 450px; height: auto;" />
             </div>
+
 
             <div class="hero-section__search">
 
@@ -17,7 +17,7 @@
                     <div class="form__field">
                         <label for="formInput#search">Search Developers </label>
                         <input class="input input--text" id="formInput#search" type="text" name="search_query"
-                            value="{{search_query}}" placeholder="Search by student name or interest" />
+                            value="{{search_query}}" placeholder="Search by record" />
                     </div>
 
                     <input class="btn btn--sub btn--lg" type="submit" value="Search" />
@@ -44,8 +44,7 @@
                                 </div>
                             </div>
                             <p class="dev__info">{{profile.bio|slice:"150"}}</p>
-                            <p class="dream_university">Dream School: {{ profile.dream_School }}</p>
-                            <p class="intended_major">Dream Major: {{profile.intended_Major }}</p>
+
 
                             <div class="dev__skills">
 
