--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -14,9 +14,13 @@
                 <form id='searchForm' class="form" action="{% url 'projects' %}" method="get">
                     <div class="form__field">
                         <label for="formInput#search">Your Data </label>
+                        <div class="settings">
+
+
                         <input class="input input--text" id="formInput#search" type="text" name="search_query"
                             placeholder="Search by Title" value="{{search_query}}" />
                     </div>
+
 
                     <input class="btn btn--sub btn--lg" type="submit" value="Search" />
                 </form>
