--- a/static/uikit/styles/modules/_variables.css
+++ b/static/uikit/styles/modules/_variables.css
@@ -6,7 +6,7 @@
   --color-sub-lighter: #ededfd;
   --color-text: #737373;
   --color-gray: #8b8b8b;
-  --color-light: #e5e7eb;
+  --color-light: #B9314F;
   --color-light-gray: #767676;
   --color-bg: #f8fafd;
   --color-white: #fffefd;
