--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -7,7 +7,7 @@
     <section class="hero-section text-center">
         <div class="container container--narrow">
             <div class="hero-section__box">
-                <img src="images/bloom-logo-nobg.png" alt="Bloom Logo" style="max-width: 450px; height: auto;" />
+                <img src="images/bloom3.png" alt="Bloom Logo" style="max-width: 450px; height: auto;" />
     </section>
 
 
